--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 * {
@@ -39,5 +38,808 @@ a {
 img {
   display: block;
   max-width: 100%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Open sans", sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  color: #6a727f;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+input,
+button,
+textarea,
+select {
+  font-family: "Open sans", sans-serif;
+  font-size: 14px;
+  outline: none;
+  border: 0;
+}
+
+input {
+  line-height: normal;
+}
+
+section[id] {
+  scroll-margin-top: 30px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.second-font {
+  font-family: "Raleway", sans-serif;
+}
+
+.btn {
+  cursor: pointer;
+  outline: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Open sans", sans-serif;
+  height: 55px;
+  padding-left: 70px;
+  padding-right: 70px;
+  border-radius: 6px;
+}
+
+.btn--primary {
+  background-color: #4a44f2;
+}
+
+.btn--secondary {
+  background-color: transparent;
+  background-image: -webkit-gradient(linear, left top, right top, from(#f475a0), to(#feac3d));
+  background-image: linear-gradient(to right, #f475a0, #feac3d);
+}
+
+a {
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #393e46;
+}
+
+.heading {
+  font-size: 36px;
+  line-height: 1.55556;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  margin-bottom: 30px;
+}
+
+.title {
+  font-size: 22px;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  line-height: 1.59091;
+  margin-bottom: 20px;
+  display: block;
+  color: #393e46;
+}
+
+.text {
+  font-size: 18px;
+  line-height: 1.88889;
+}
+
+.text--small {
+  font-size: 14px;
+}
+
+@media screen and (max-width: 767px) {
+  .heading {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  .title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .text {
+    font-size: 16px;
+  }
+}
+
+.header {
+  display: block;
+}
+
+.header-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 0;
+}
+
+.header-phone {
+  color: #393e46;
+  font-weight: 300;
+}
+
+.header-phone a {
+  font-weight: 600;
+  margin-left: 15px;
+  color: inherit;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0 60px;
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    margin-bottom: 20px;
+  }
+  .header-phone {
+    display: none;
+  }
+  .navigation {
+    gap: 0 25px;
+  }
+  .header-main {
+    padding: 20px 0;
+  }
+}
+
+.hero {
+  position: relative;
+  margin-bottom: 200px;
+  display: block;
+}
+
+.hero-image {
+  margin-left: auto;
+  max-width: 65%;
+}
+
+.hero-content {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 2;
+  left: 20%;
+}
+
+.hero-caption {
+  font-size: 72px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.hero-heading {
+  font-size: 150px;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+
+.hero-link {
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: underline;
+  color: #6a727f;
+  display: inline-block;
+}
+
+@media screen and (max-width: 1023px) {
+  .hero {
+    margin-bottom: 100px;
+  }
+  .hero-caption {
+    font-size: 40px;
+  }
+  .hero-heading {
+    font-size: 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .hero {
+    margin-bottom: 50px;
+  }
+  .hero-content {
+    left: 15px;
+  }
+  .hero-caption {
+    font-size: 20px;
+  }
+  .hero-heading {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  .hero-link {
+    font-size: 16px;
+  }
+  .hero-image {
+    max-width: 75%;
+  }
+}
+
+.portfolio {
+  margin-bottom: 200px;
+  display: block;
+}
+
+.portfolio-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0 90px;
+  margin-bottom: 95px;
+}
+
+.portfolio-image {
+  margin-bottom: 40px;
+  display: block;
+}
+
+.portfolio-category {
+  color: #6a727f;
+}
+
+.portfolio-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 85px 0;
+}
+
+.portfolio-link {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+@media screen and (max-width: 1023px) {
+  .portfolio {
+    margin-bottom: 100px;
+  }
+  .portfolio-list {
+    grid-gap: 0 20px;
+    margin-bottom: 45px;
+  }
+  .portfolio-column {
+    gap: 40px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio {
+    margin-bottom: 50px;
+  }
+  .portfolio-list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 40px 0;
+  }
+  .portfolio-image {
+    margin-bottom: 30px;
+  }
+  .portfolio-image img {
+    width: 100%;
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+.partner {
+  margin-bottom: 150px;
+  display: block;
+}
+
+.partner-main {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 90px 0;
+}
+
+.partner-item {
+  padding: 0 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+}
+
+.partner-item:hover {
+  opacity: 0.1;
+}
+
+@media screen and (max-width: 1023px) {
+  .partner {
+    margin-bottom: 100px;
+  }
+  .partner-item {
+    padding: 0 25px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .partner {
+    margin-bottom: 50px;
+  }
+  .partner-main {
+    grid-gap: 25px 15px;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+}
+
+.team {
+  padding: 150px 0;
+  background-color: #f7f8f9;
+  display: block;
+}
+
+.team-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 30px;
+}
+
+.team-desc {
+  font-size: 18px;
+  line-height: 1.88889;
+  margin-bottom: 60px;
+}
+
+.team-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 0 30px;
+}
+
+.team-img2 {
+  margin-top: 30px;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 1024px) {
+  .team-content {
+    max-width: 370px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    width: 100%;
+  }
+  .team-images {
+    width: 100%;
+    max-width: 670px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .team {
+    padding: 100px 0;
+  }
+  .team-main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 60px 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .team {
+    padding: 50px 0;
+  }
+  .team-desc {
+    margin-bottom: 30px;
+  }
+}
+
+.blog {
+  padding: 150px 0;
+  display: block;
+}
+
+.blog-header {
+  max-width: 560px;
+  margin: 0 auto 100px;
+  text-align: center;
+}
+
+.blog-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+.blog-image {
+  margin-bottom: 40px;
+  display: block;
+}
+
+.blog-category {
+  color: #6a727f;
+}
+
+@media screen and (max-width: 1023px) {
+  .blog {
+    padding: 100px 0;
+  }
+  .blog-header {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .blog {
+    padding: 50px 0;
+  }
+  .blog-header {
+    margin-bottom: 30px;
+  }
+  .blog-list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .blog-image {
+    margin-bottom: 20px;
+  }
+  .blog-image img {
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+  }
+}
+
+.contact {
+  padding: 150px 0;
+  background: url("../../images/contact-bg.png") no-repeat center/cover;
+  display: block;
+}
+
+.contact-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.contact-header {
+  margin: 0 auto 100px;
+  text-align: center;
+}
+
+.contact-heading {
+  font-weight: 400;
+}
+
+.contact-heading, .contact-desc {
+  color: white;
+}
+
+.contact-field {
+  padding: 20px 30px;
+  display: block;
+  width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-color: transparent;
+  color: white;
+  -webkit-transition: border 0.2s linear;
+  transition: border 0.2s linear;
+}
+
+.contact-field::-webkit-input-placeholder {
+  color: white;
+}
+
+.contact-field::-moz-input-placeholder {
+  color: white;
+}
+
+.contact-field:focus {
+  border-color: white;
+}
+
+.contact-area {
+  line-height: 1.55;
+  resize: none;
+  min-height: 100px;
+}
+
+@media screen and (max-width: 1023px) {
+  .contact {
+    padding: 100px 0;
+  }
+  .contact-header {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contact {
+    padding: 50px 0;
+  }
+  .contact-header {
+    margin-bottom: 30px;
+  }
+}
+
+.footer-top {
+  padding: 150px 0;
+  background-color: #282f3a;
+}
+
+.footer-main {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0 130px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 40px;
+}
+
+.footer-desc {
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.footer .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0 30px;
+}
+
+.footer .social-item {
+  cursor: pointer;
+  color: #6a727f;
+}
+
+.footer .social-item:hover {
+  color: white;
+}
+
+.footer-heading {
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.footer-links {
+  list-style: none;
+}
+
+.footer-item {
+  margin-bottom: 30px;
+}
+
+.footer-link {
+  display: inline-block;
+  color: #6a727f;
+}
+
+.footer-info {
+  list-style: none;
+  margin-bottom: 40px;
+}
+
+.footer-info li {
+  margin-bottom: 15px;
+  line-height: 1.875;
+}
+
+.footer-highlight {
+  color: white;
+}
+
+.footer-bottom {
+  background-color: #252b36;
+  line-height: 1.6;
+}
+
+.footer-bottom a {
+  color: white;
+}
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+}
+
+.footer-rocket {
+  color: white;
+  border-radius: 4px;
+  width: 70px;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #4a44f2;
+  font-size: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 2;
+}
+
+@media screen and (max-width: 1023px) {
+  .footer-top {
+    padding: 100px 0;
+  }
+  .footer-main {
+    grid-gap: 0 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-top {
+    padding: 50px 0;
+  }
+  .footer-main {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 30px 0;
+  }
+  .footer-container {
+    padding: 35px 15px;
+  }
+  .footer-rocket {
+    width: 50px;
+    height: 50px;
+    right: 15px;
+  }
+}
+
+.menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  background-color: white;
+  z-index: 9999;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 0.2s linear;
+  transition: -webkit-transform 0.2s linear;
+  transition: transform 0.2s linear;
+  transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+  will-change: transform;
+}
+
+.menu.is-active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-list {
+  list-style: none;
+  height: 100%;
+  padding: 70px 20px 20px;
+}
+
+.menu-item {
+  margin-bottom: 15px;
+}
+
+.menu-link {
+  display: block;
+  padding: 15px;
+  text-transform: capitalize;
+  color: #393e46;
+  border-radius: 6px;
+  -webkit-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+
+.menu-link:hover {
+  color: white;
+  background-color: #4a44f2;
+}
+
+.menu-close {
+  cursor: pointer;
+  font-size: 30px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.menu-phone {
+  padding: 15px;
+  color: #393e46;
+}
+
+.menu-phone a {
+  color: inherit;
+  font-weight: bold;
+}
+
+.menu-toggle {
+  cursor: pointer;
 }
 /*# sourceMappingURL=main.css.map */
