--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ h6 {
 
 .contact {
   padding: 150px 0;
-  background: url("../../images/contact-bg.png") no-repeat center/cover;
+  background: url("../images/contact-bg.png") no-repeat center/cover;
   display: block;
 }
 
