--- a/sass/Layouts/_contact.scss
+++ b/sass/Layouts/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
   padding: 150px 0;
-  background: url("../../images/contact-bg.png") no-repeat center / cover;
+  background: url("../images/contact-bg.png") no-repeat center / cover;
   display: block;
   &-container {
     max-width: 600px;
